Correction du bug graphique (superposition du texte sur le picto, mal aligné) introduit en [84911].
git-svn-id: svn://zone.spip.org/spip-zone/_plugins_@89712 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/links/css/links.css
+++ b/links/css/links.css
@@ -25,7 +25,7 @@ a.spip_mail:before { content: ''; }
 
 /* Autres services */
 a[href ^="https://"],
-a.lock { padding-right: 13px; background-image: url(img/links/lock.gif); background-repeat:no-repeat; background-position: center left;}
+a.lock { padding-right: 13px; background-image: url(img/links/lock.gif); background-repeat:no-repeat; }
 
 a[href ^="ftp://"],
 a.ftp { padding-right: 13px; background-image: url(img/links/ftp.gif); }
